--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcom to lib cms</h1>
     <h2>Hi world</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa doloribus sint odit in dolorum beatae fuga, molestiae tempora, soluta dignissimos delectus possimus sunt facilis, magni totam provident pariatur quam reiciendis?</p>
 </body>
 </html>
